[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "iptv-to-m3u-converter"
version = "1.1.0"
authors = [
    {name = "Ziad Boughdir", email = "ziadboughdir@gmail.com"},
]
description = "A Python GUI application to fetch IPTV server information and generate M3U playlists"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["iptv", "m3u", "converter", "python", "gui"]

[project.urls]
Homepage = "https://github.com/ziadboughdir-byte/iptv-to-m3u"
Repository = "https://github.com/ziadboughdir-byte/iptv-to-m3u"

[project.optional-dependencies]
development = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.black]
line-length = 79
include = '\\.py$'
exclude = ''

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
